cluster/beefeater/kazinot.com/kazinot-com-service-master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kazinot-com
  namespace: affwebsites
  labels:
    deployer.ginbits.com/org: ginbits
    deployer.ginbits.com/repo: beefeater
    deployer.ginbits.com/branch: master
    deployer.ginbits.com/image: kazinot.com
    domain: kazinot.com
spec:
  replicas: 1
  selector:
    matchLabels:
      domain: kazinot.com
  template:
    metadata:
      labels:
        domain: kazinot.com
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: website
        image: ghcr.io/ginbits/beefeater/kazinot.com:master
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: kazinot-com
  namespace: affwebsites
spec:
  selector:
    domain: kazinot.com
  ports:
  - name: http
    port: 8080
    protocol: TCP
  type: NodePort
