cluster/beefeater/kazinot.com/kazinot-com-ingress-master.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kazinot-com-ingress
  namespace: affwebsites
spec:
  rules:
  - host: kazinot.com
    http:
      paths:
      - backend:
          service:
            name: kazinot-com
            port:
              number: 8080
        path: /
        pathType: Prefix
